fix(AppModal): add 'z-index' for modals

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -26,6 +26,7 @@
 
 	/** z-index **/
 	--z-index-loader-absolute: 100000;
+	--z-index-modal: 1000;
 	--z-index-sidebar: 100;
 	--z-index-popover: 10;
 }
